# blog_project

./: .gitignore  pyproject.toml
mysite/: db.sqlite3
mysite/blog/: admin.py  forms.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_comments_create_date_alter_post_create_date.py  0003_alter_comments_create_date_alter_post_create_date.py  0004_rename_published_data_post_published_date_and_more.py  0005_alter_comments_create_date_alter_post_create_date.py  0006_alter_comments_create_date_alter_post_create_date.py  0007_alter_comments_create_date_alter_post_create_date.py  0008_alter_comments_create_date_alter_post_create_date.py  0009_alter_comments_create_date_alter_post_create_date.py  0010_remove_post_create_date_post_created_date_and_more.py  0011_alter_comments_create_date_alter_post_created_date.py  0012_alter_comments_create_date_alter_post_created_date.py  0013_alter_comments_create_date_alter_post_created_date.py  0014_alter_comments_create_date_alter_post_created_date.py  0015_alter_comments_create_date_alter_post_created_date.py  0016_alter_comments_create_date_alter_post_created_date.py  0017_alter_comments_create_date_alter_post_created_date.py  0018_alter_comments_create_date_alter_post_created_date.py  0019_alter_comments_create_date_alter_post_created_date.py  0020_alter_comments_create_date_alter_post_created_date.py  0021_alter_comments_create_date_alter_post_created_date.py  0022_post_image.py  0023_alter_post_image.py  0024_alter_post_image.py  0025_alter_post_image.py  (+5 more)
mysite/mysite/: settings.py  urls.py
(+10 files in other folders)
